fixed grammar in html content

--- a/index.html
+++ b/index.html
@@ -62,6 +62,6 @@
   <input id="submit" type="submit">
 </form>
 <!--disclaimer about background image-->
-<p id="disclaimer">This background image is from the <a href="https://lasers.llnl.gov/media/photo-gallery">National Ignition Facility</a> image and the author is Lawrence Livermore National Laboratory. This web page is not affiliated with or endorsed by the aformention party. This web page is for educational and demonstration purposes only.</p>
+<p id="disclaimer">This background image is from the <a href="https://lasers.llnl.gov/media/photo-gallery">National Ignition Facility</a> image gallery and the author is Lawrence Livermore National Laboratory. This web page is not affiliated with or endorsed by the aformention party. This web page is for educational and demonstration purposes only.</p>
 </body>
 </html>
